fix(shs-5105): gin form override for input width overlap

--- a/docroot/themes/humsci/humsci_basic/src/scss/ckeditor/imports.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/ckeditor/imports.scss
@@ -332,3 +332,10 @@ $px-only: true;
 .paragraph-type--stanford-gallery .hs-paragraphs-tabs.tabs {
   display: none;
 }
+
+// Gin theme overrides.
+.gin--edit-form {
+  input.form-element {
+    width: 100%;
+  }
+}
